# maya_hook_and_modify_ui

./: CMakeLists.txt  CMakeSettings.json
minhook/lib/: minhook.x64.lib
src/: MyLibrary.cpp  MyLibrary2.cpp
tests/: CMakeLists.txt  inject_dll.cpp  target_test.cpp
